--- a/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
+++ b/model_prognoza_ottoka_klientov_banka/notebooks/prognoz_ottoka_klientov.ipynb
@@ -12270,7 +12270,9 @@
     "features = data.drop('Exited', axis=1)\n",
     "target = data['Exited']\n",
     "\n",
-    "features_train, features_test, target_train, target_test = train_test_split(features, target, test_size=0.25)\n",
+    "features_df, features_valid, target_df, target_valid = train_test_split(features, target, test_size=.2)\n",
+    "features_train, features_test, target_train, target_test = train_test_split(features_df, target_df, test_size=.25)\n",
+    "\n",
     "\n",
     "# проверим размер обучающей выборки\n",
     "display(features_train.shape)\n",
@@ -31808,11 +31810,11 @@
     "])\n",
     "\n",
     "pipe.fit(features_train, target_train)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# сохраним параметры модели\n",
     "model_score_results['LR']['best_params'] = pipe.get_params()['estimator'].get_params()\n",
     "# счетчик лучшего значения f1\n",
@@ -31820,9 +31822,9 @@
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -34158,22 +34160,22 @@
     "# обучение модели на данных после dawnsampling\n",
     "pipe = Pipeline(steps=[\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('estimator', LogisticRegression(solver='liblinear', class_weight='balanced', random_state=12345))\n",
+    "    ('estimator', LogisticRegression(solver='liblinear', random_state=12345))\n",
     "])\n",
     "\n",
     "pipe.fit(downsampled_features, downsampled_targets)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -36517,22 +36519,22 @@
     "# обучение модели на данных после upsampling\n",
     "pipe = Pipeline(steps=[\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('estimator', LogisticRegression(solver='liblinear', class_weight='balanced', random_state=12345))\n",
+    "    ('estimator', LogisticRegression(solver='liblinear', random_state=12345))\n",
     "])\n",
     "\n",
     "pipe.fit(upsampled_features, upsampled_targets)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -38571,18 +38573,18 @@
     "# обучение модели на стандартных данных\n",
     "model = RandomForestClassifier(random_state=12345, **random_forest_model.best_params_)\n",
     "model.fit(features_train, target_train)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -40686,18 +40688,18 @@
     "# обучение модели на данных после downsampling\n",
     "model = RandomForestClassifier(random_state=12345, **random_forest_model.best_params_)\n",
     "model.fit(downsampled_features, downsampled_targets)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -42759,18 +42761,18 @@
     "# обучение модели на данных после upsampling\n",
     "model = RandomForestClassifier(random_state=12345, **random_forest_model.best_params_)\n",
     "model.fit(upsampled_features, upsampled_targets)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -44886,18 +44888,18 @@
     "    ('estimator', SVC(probability=True, random_state=12345))\n",
     "])\n",
     "pipe.fit(features_train, target_train)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -46890,18 +46892,18 @@
     "    ('estimator', SVC(probability=True, random_state=12345))\n",
     "])\n",
     "pipe.fit(downsampled_features, downsampled_targets)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -48970,18 +48972,18 @@
     "    ('estimator', SVC(probability=True, random_state=12345))\n",
     "])\n",
     "pipe.fit(upsampled_features, upsampled_targets)\n",
-    "probabilities_valid = pipe.predict_proba(features_test)\n",
+    "probabilities_valid = pipe.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -50063,18 +50065,18 @@
     "# обучение модели на стандартных данных\n",
     "model = DecisionTreeClassifier(random_state=12345, **descision_tree_model.best_params_)\n",
     "model.fit(features_train, target_train)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -51096,18 +51098,18 @@
     "# обучение модели на данных после downsampling\n",
     "model = DecisionTreeClassifier(random_state=12345, **descision_tree_model.best_params_)\n",
     "model.fit(downsampled_features, downsampled_targets)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        model_score_results['DTC']['downsampled']['f1'] = f1\n",
@@ -52134,18 +52136,18 @@
     "# обучение модели на данных после upsampling\n",
     "model = DecisionTreeClassifier(random_state=12345, **descision_tree_model.best_params_)\n",
     "model.fit(upsampled_features, upsampled_targets)\n",
-    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_valid = model.predict_proba(features_valid)\n",
     "probabilities_one_valid = probabilities_valid[:, 1]\n",
     "# нарисуем roc_auc кривую\n",
-    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "plot_roc_auc_curve(target_valid, probabilities_one_valid)\n",
     "# счетчик лучшего значения f1\n",
     "best_f1 = 0\n",
     "# определяем threshold с наилучшими показателями\n",
     "for threshold in np.arange(0, 0.95, 0.05):\n",
     "    predicted_valid = probabilities_one_valid > threshold\n",
-    "    precision = precision_score(target_test, predicted_valid)\n",
-    "    recall = recall_score(target_test, predicted_valid)\n",
-    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    precision = precision_score(target_valid, predicted_valid)\n",
+    "    recall = recall_score(target_valid, predicted_valid)\n",
+    "    f1 = f1_score(target_valid, predicted_valid)\n",
     "    # сохраняем показатели при наилучшем f1_score\n",
     "    if f1 > best_f1:\n",
     "        best_f1 = f1\n",
@@ -52211,6 +52213,55 @@
     "print(f\"f1_score наилучшей модели: {best_score}\")\n",
     "print(f\"Threshold наилучшей модели: {threshold}\")\n",
     "print(f\"Метод работы с данными, показавший лучший результат модели: {data_method}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Проверим качество наилучшей модели на тестовых данных"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# обучение модели на стандартных данных\n",
+    "model = RandomForestClassifier(random_state=12345, **random_forest_model.best_params_)\n",
+    "model.fit(features_train, target_train)\n",
+    "probabilities_valid = model.predict_proba(features_test)\n",
+    "probabilities_one_valid = probabilities_valid[:, 1]\n",
+    "# нарисуем roc_auc кривую\n",
+    "plot_roc_auc_curve(target_test, probabilities_one_valid)\n",
+    "# счетчик лучшего значения f1\n",
+    "best_f1 = 0\n",
+    "best_threshold = 0\n",
+    "# определяем threshold с наилучшими показателями\n",
+    "for threshold in np.arange(0, 0.95, 0.05):\n",
+    "    predicted_valid = probabilities_one_valid > threshold\n",
+    "    precision = precision_score(target_test, predicted_valid)\n",
+    "    recall = recall_score(target_test, predicted_valid)\n",
+    "    f1 = f1_score(target_test, predicted_valid)\n",
+    "    # сохраняем показатели при наилучшем f1_score\n",
+    "    if f1 > best_f1:\n",
+    "        best_f1 = f1\n",
+    "        best_threshold = threshold\n",
+    "        model_score_results['RFC']['standard_data']['f1'] = f1\n",
+    "        model_score_results['RFC']['standard_data']['threshold'] = threshold\n",
+    "\n",
+    "    print(\"Порог = {:.2f} | Точность = {:.3f}, Полнота = {:.3f} F1 = {:.4f}\".format(\n",
+    "        threshold, precision, recall, f1))\n",
+    "print(f\"Лучший f1_score: {best_f1}\")\n",
+    "print(f\"Threshold: {best_threshold}\")"
    ],
    "metadata": {
     "collapsed": false,
