--- a/10_sprint_ML_in_buisness/notebooks/determining the best wells.ipynb
+++ b/10_sprint_ML_in_buisness/notebooks/determining the best wells.ipynb
@@ -1,101 +1,146 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Описание проекта\n",
+    "\n",
+    "Вы работаете в добывающей компании «ГлавРосГосНефть». Нужно решить, где бурить новую скважину.\n",
+    "\n",
+    "### Шаги для выбора локации обычно такие:\n",
+    "\n",
+    " - В избранном регионе собирают характеристики для скважин: качество нефти и объём её запасов;\n",
+    " - Строят модель для предсказания объёма запасов в новых скважинах;\n",
+    " - Выбирают скважины с самыми высокими оценками значений;\n",
+    " - Определяют регион с максимальной суммарной прибылью отобранных скважин.\n",
+    "\n",
+    "Предоставлены пробы нефти в трёх регионах. Характеристики для каждой скважины в регионе уже известны.\n",
+    "\n",
+    "### Описание данных\n",
+    "\n",
+    "Данные геологоразведки трёх регионов находятся в файлах:\n",
+    "\n",
+    "id — уникальный идентификатор скважины;\n",
+    "f0, f1, f2 — три признака точек (неважно, что они означают, но сами признаки значимы);\n",
+    "product — объём запасов в скважине (тыс. баррелей).\n",
+    "\n",
+    "### Задача\n",
+    "\n",
+    " - Построить модель для определения региона, где добыча принесёт наибольшую прибыль.\n",
+    " - Проанализировать возможную прибыль и риски техникой Bootstrap.\n",
+    "\n",
+    "### Условия\n",
+    "\n",
+    "Для обучения модели подходит только линейная регрессия (остальные — недостаточно предсказуемые).\n",
+    "При разведке региона исследуют 500 точек, из которых с помощью машинного обучения выбирают 200 лучших для разработки.\n",
+    "Бюджет на разработку скважин в регионе — 10 млрд рублей.\n",
+    "При нынешних ценах один баррель сырья приносит 450 рублей дохода. Доход с каждой единицы продукта составляет 450 тыс. рублей, поскольку объём указан в тысячах баррелей.\n",
+    "После оценки рисков нужно оставить лишь те регионы, в которых вероятность убытков меньше 2.5%. Среди них выбирают регион с наибольшей средней прибылью."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## Шаг 1. Загрузим и исследуем данные"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
+    "revenue_per_unit = 450000 # доход за единицу продукта"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "data_1 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_0.csv')\n",
-    "data_2 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_1.csv')\n",
-    "data_3 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_2.csv')\n",
-    "\n",
-    "data = pd.concat([data_1, data_2, data_3])"
-   ],
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "data_region_1 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_0.csv')\n",
+    "data_region_2 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_1.csv')\n",
+    "data_region_3 = pd.read_csv('https://code.s3.yandex.net/datasets/geo_data_2.csv')\n",
+    "data_region_1.name = 'data_region_1'\n",
+    "data_region_2.name = 'data_region_2'\n",
+    "data_region_3.name = 'data_region_3'\n",
+    "\n",
+    "data_all_regions = pd.concat([data_region_1, data_region_2, data_region_3])\n",
+    "data_list = [data_region_1, data_region_2, data_region_3]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300000\n",
-      "299951\n",
-      "          id         f0         f1         f2     product\n",
-      "7530   HZww2   1.061194  -0.373969  10.430210  158.828695\n",
-      "41724  bxg6G  -0.823752   0.546319   3.630479   93.007798\n",
-      "51970  A5aEY  -0.180335   0.935548  -2.094773   33.020205\n",
-      "63593  QcMuo   0.635635  -0.473422   0.862670   64.578675\n",
-      "66136  74z30   1.084962  -0.312358   6.990771  127.643327\n",
-      "69163  AGS9W  -0.933795   0.116194  -3.655896   19.230453\n",
-      "75715  Tdehs   0.112079   0.430296   3.218993   60.964018\n",
-      "90815  fiKDv   0.049883   0.841313   6.394613  137.346586\n",
-      "92341  TtcGQ   0.110711   1.022689   0.911381  101.318008\n",
-      "97785  bsk9y   0.378429   0.005837   0.160827  160.637302\n",
-      "23086  CXJ2r   4.595329  -1.967882   4.000767  107.813044\n",
-      "41906  LHZR0  -8.989672  -4.286607   2.009139   57.085625\n",
-      "46293  pGQRI  -5.171681  -0.546409   3.002864   84.038886\n",
-      "47203  gnA83  13.842436 -12.362831   4.003258  107.813044\n",
-      "75179  mpZhE  11.206881  -2.291883   1.003807   26.953261\n",
-      "76544  L1Fdm  -3.346138   1.878476   0.004355    3.179103\n",
-      "81779  it2OW  -7.472182 -14.802085   4.005783  110.992147\n",
-      "82178  bfPNe  -6.202799  -4.820045   2.995107   84.038886\n",
-      "82873  wt4Uk  10.259972  -9.376355   4.994297  134.766305\n",
-      "84461  5ltQ6  18.213839   2.191999   3.993869  107.813044\n",
-      "94352  Q64YW   3.005548  -0.243063   5.000265  134.766305\n",
-      "97856  Y2udP  12.544203   5.897907   1.007743   26.953261\n",
-      "99665  g3RRG   5.884971  -3.853958   5.000735  134.766305\n",
-      "99975  Mp3uM   6.109864  -6.680806   4.995256  134.766305\n",
-      "7260   uSye4  -0.066172   2.543996  -0.054049  141.345070\n",
-      "9042   LhkAh  -1.011388  -1.422994   0.167327   97.289509\n",
-      "13672  i2csb   0.395736  -1.039466   3.262824  136.079194\n",
-      "17007  g2I86  -1.616730   1.110380   4.226968  107.940639\n",
-      "17551  TXPOv  -1.714714   0.545975   6.907380  109.685043\n",
-      "27380  2tyMi  -1.789602  -1.359044  -4.840745  145.901447\n",
-      "27885  wqgPo   0.052461   1.424025   0.085541   10.686576\n",
-      "31306  H2jd8  -0.882244   0.102113   5.132965   97.736331\n",
-      "40478  uMqiK  -1.772509   0.152085  -0.422541  119.682928\n",
-      "43233  xCHr8  -0.847066   2.101796   5.597130  184.388641\n",
-      "48472  scFN4   2.198203   0.733283  10.562272  153.719681\n",
-      "49106  lFHA5   1.143130   1.528147   2.717799   84.144358\n",
-      "49564  VF7Jo  -0.883115   0.560537   0.723601  136.233420\n",
-      "50308  rAJA6   1.426039   1.262731   1.915009   80.927100\n",
-      "55967  KUPhW   1.211150   3.176408   5.543540  132.831802\n",
-      "57741  Suyut   0.730034   0.998910   0.673342   51.978338\n",
-      "61622  D8TNs   0.280382   0.061393   4.887870  114.943876\n",
-      "72896  5ssQt  -0.651825   0.782415   2.690636  120.108761\n",
-      "79311  kpKGs   0.391595   0.520890   0.935081   91.558464\n",
-      "80750  TAqwC  -0.176382  -0.503558   1.877303   38.618695\n",
-      "82577  eVdPR  -3.325910   0.212653  -2.172340   61.323206\n",
-      "87965  tgOl6  -6.077439  -1.366449   1.858951  153.001240\n",
-      "91259  G6k8A   3.021943   2.091350   2.325737   81.922702\n",
-      "95090  Vcm5J   2.587702   1.986875   2.482245   92.327572\n",
-      "97706  PyNp5  -1.248973  -1.246669  -0.538638  122.021857\n"
+      "============================== data_region_1 ==============================\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column   Non-Null Count   Dtype  \n",
+      "---  ------   --------------   -----  \n",
+      " 0   id       100000 non-null  object \n",
+      " 1   f0       100000 non-null  float64\n",
+      " 2   f1       100000 non-null  float64\n",
+      " 3   f2       100000 non-null  float64\n",
+      " 4   product  100000 non-null  float64\n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 3.8+ MB\n",
+      "============================== data_region_2 ==============================\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column   Non-Null Count   Dtype  \n",
+      "---  ------   --------------   -----  \n",
+      " 0   id       100000 non-null  object \n",
+      " 1   f0       100000 non-null  float64\n",
+      " 2   f1       100000 non-null  float64\n",
+      " 3   f2       100000 non-null  float64\n",
+      " 4   product  100000 non-null  float64\n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 3.8+ MB\n",
+      "============================== data_region_3 ==============================\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column   Non-Null Count   Dtype  \n",
+      "---  ------   --------------   -----  \n",
+      " 0   id       100000 non-null  object \n",
+      " 1   f0       100000 non-null  float64\n",
+      " 2   f1       100000 non-null  float64\n",
+      " 3   f2       100000 non-null  float64\n",
+      " 4   product  100000 non-null  float64\n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 3.8+ MB\n"
      ]
     }
    ],
    "source": [
-    "print(len(data))\n",
-    "print(len(data['id'].unique()))\n",
-    "print(data[data['id'].duplicated()])"
+    "for data in data_list:\n",
+    "    print(f\"{'='*30} {data.name} {'='*30}\")\n",
+    "    data.info()"
    ],
    "metadata": {
     "collapsed": false,
@@ -103,27 +148,156 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Отлично, в данных отсутствуют пропуски.\n",
+    "Признаки и целевой столбец имеют тип данных float64."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================== data_region_1 ==============================\n",
+      "                  f0             f1             f2        product\n",
+      "count  100000.000000  100000.000000  100000.000000  100000.000000\n",
+      "mean        0.500419       0.250143       2.502647      92.500000\n",
+      "std         0.871832       0.504433       3.248248      44.288691\n",
+      "min        -1.408605      -0.848218     -12.088328       0.000000\n",
+      "25%        -0.072580      -0.200881       0.287748      56.497507\n",
+      "50%         0.502360       0.250252       2.515969      91.849972\n",
+      "75%         1.073581       0.700646       4.715088     128.564089\n",
+      "max         2.362331       1.343769      16.003790     185.364347\n",
+      "============================== data_region_2 ==============================\n",
+      "                  f0             f1             f2        product\n",
+      "count  100000.000000  100000.000000  100000.000000  100000.000000\n",
+      "mean        1.141296      -4.796579       2.494541      68.825000\n",
+      "std         8.965932       5.119872       1.703572      45.944423\n",
+      "min       -31.609576     -26.358598      -0.018144       0.000000\n",
+      "25%        -6.298551      -8.267985       1.000021      26.953261\n",
+      "50%         1.153055      -4.813172       2.011479      57.085625\n",
+      "75%         8.621015      -1.332816       3.999904     107.813044\n",
+      "max        29.421755      18.734063       5.019721     137.945408\n",
+      "============================== data_region_3 ==============================\n",
+      "                  f0             f1             f2        product\n",
+      "count  100000.000000  100000.000000  100000.000000  100000.000000\n",
+      "mean        0.002023      -0.002081       2.495128      95.000000\n",
+      "std         1.732045       1.730417       3.473445      44.749921\n",
+      "min        -8.760004      -7.084020     -11.970335       0.000000\n",
+      "25%        -1.162288      -1.174820       0.130359      59.450441\n",
+      "50%         0.009424      -0.009482       2.484236      94.925613\n",
+      "75%         1.158535       1.163678       4.858794     130.595027\n",
+      "max         7.238262       7.844801      16.739402     190.029838\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in data_list:\n",
+    "    print(f\"{'='*30} {data.name} {'='*30}\")\n",
+    "    print(data.describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество скважин: 300000\n",
+      "Количество уникальных скважин: 299951\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Количество скважин: {len(data_all_regions)}\")\n",
+    "print(f\"Количество уникальных скважин: {len(data_all_regions['id'].unique())}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "49 скважин принадлежат не одному региону. Хмм... Ну, может быть это и нормально, мало ли как они там зарегистрированы. Оставим как есть."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Датасет data_region_1 содержит 0 явных дубликатов\n",
+      "Датасет data_region_2 содержит 0 явных дубликатов\n",
+      "Датасет data_region_3 содержит 0 явных дубликатов\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in data_list:\n",
+    "    print(f\"Датасет {data.name} содержит {data.duplicated().sum()} явных дубликатов\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Явные дубли в данных отсутствуют."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
