--- a/10_sprint_ML_in_buisness/notebooks/determining the best wells.ipynb
+++ b/10_sprint_ML_in_buisness/notebooks/determining the best wells.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
     "from sklearn.metrics import mean_squared_error as mse\n",
     "\n",
     "revenue_per_unit = 450000 # доход за единицу продукта"
@@ -276,6 +276,43 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Шаг 2. Обучим и проверим модель для каждого региона"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "for data in data_list:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
